[package]
name = "stackedit"
version = "0.0.0"
description = "FOSS WYSIWYG Markdown editor"
authors = ["DotGlitch", 'dotglitch.dev', 'Andrew G. Knackstedt']
license = "Apache 2.0"
repository = "https://github.com/knackstedt/stackedit"
default-run = "stackedit"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "shell-all", "http-all", "dialog-all", "window-set-title", "window-set-always-on-top", "updater", "window-show", "fs-all", "clipboard-all", "devtools"] }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
